[gd_scene load_steps=6 format=3 uid="uid://ddbaywnq8p2hd"]

[ext_resource type="Script" path="res://Code/MainMenu.gd" id="1_glogx"]
[ext_resource type="Texture2D" uid="uid://4kkfvoxk3fvx" path="res://Sprites/clipboard_mainmenu.png" id="2_8gdd1"]
[ext_resource type="Texture2D" uid="uid://1iowybfmj5ta" path="res://Sprites/buttons/button_quit.png" id="3_5wduh"]
[ext_resource type="Texture2D" uid="uid://bb3tk7ww6eseo" path="res://Sprites/buttons/button_play.png" id="4_rcaw5"]
[ext_resource type="Texture2D" uid="uid://dgkdutyj5gu0d" path="res://Sprites/buttons/button_settings.png" id="5_gcn2c"]

[node name="Mainmenu" type="Node2D"]
script = ExtResource("1_glogx")

[node name="ActualMainMenu" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="ActualMainMenu"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(29.24, 16.56)
color = Color(0.160784, 0.247059, 0.184314, 1)

[node name="Backing" type="Sprite2D" parent="ActualMainMenu"]
position = Vector2(587.125, 407)
scale = Vector2(0.692778, 0.692778)
skew = -0.0296706
texture = ExtResource("2_8gdd1")

[node name="Title" type="RichTextLabel" parent="ActualMainMenu"]
offset_right = 1152.0
offset_bottom = 222.0
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]Rock Paper 
[center]Panic"

[node name="Quit" type="Button" parent="ActualMainMenu"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
offset_left = 532.0
offset_top = 488.0
offset_right = 632.0
offset_bottom = 527.0
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="quit_button" type="Sprite2D" parent="ActualMainMenu/Quit"]
position = Vector2(55, 20)
scale = Vector2(0.528736, 0.528736)
texture = ExtResource("3_5wduh")

[node name="Play" type="Button" parent="ActualMainMenu"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
offset_left = 533.0
offset_top = 391.0
offset_right = 633.0
offset_bottom = 436.0
theme_override_font_sizes/font_size = 25
text = "Play"

[node name="play_button" type="Sprite2D" parent="ActualMainMenu/Play"]
position = Vector2(53, 23)
scale = Vector2(0.551724, 0.551724)
texture = ExtResource("4_rcaw5")

[node name="Settings_To" type="Button" parent="ActualMainMenu"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 498.0
offset_top = 443.0
offset_right = 673.0
offset_bottom = 486.0
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="settings_button" type="Sprite2D" parent="ActualMainMenu/Settings_To"]
position = Vector2(87, 20)
scale = Vector2(0.597701, 0.597701)
texture = ExtResource("5_gcn2c")

[node name="Settings" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Background" type="ColorRect" parent="Settings"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(29.24, 16.56)
color = Color(0.160784, 0.247059, 0.184314, 1)

[node name="Title" type="Label" parent="Settings"]
offset_left = 408.0
offset_right = 470.0
offset_bottom = 23.0
scale = Vector2(4.92, 4.92)
text = "Settings"

[node name="Volume_Label" type="Label" parent="Settings"]
unique_name_in_owner = true
offset_left = 355.0
offset_top = 132.0
offset_right = 455.0
offset_bottom = 155.0
scale = Vector2(1.32, 1.32)
text = "Volume: 50%"

[node name="Volume" type="HSlider" parent="Settings"]
unique_name_in_owner = true
offset_left = 357.0
offset_top = 170.0
offset_right = 760.0
offset_bottom = 186.0
step = 2.0
value = 50.0
tick_count = 10
ticks_on_borders = true

[node name="Windowed" type="Button" parent="Settings"]
unique_name_in_owner = true
offset_left = 356.0
offset_top = 256.0
offset_right = 555.0
offset_bottom = 327.0
disabled = true
text = "Windowed"

[node name="Fullscreen" type="Button" parent="Settings"]
unique_name_in_owner = true
offset_left = 555.0
offset_top = 256.0
offset_right = 754.0
offset_bottom = 327.0
text = "Fullscreen"

[node name="Back" type="Button" parent="Settings"]
offset_left = 497.0
offset_top = 554.0
offset_right = 584.0
offset_bottom = 601.0
text = "Back"

[connection signal="pressed" from="ActualMainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ActualMainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ActualMainMenu/Settings_To" to="." method="_on_settings_to_pressed"]
[connection signal="value_changed" from="Settings/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Settings/Windowed" to="." method="_on_windowed_pressed"]
[connection signal="pressed" from="Settings/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_back_pressed"]
